force-app/main/default/objects/Lead/fields/Area_of_interest__c.field-meta.xml
<CustomField>
    <fullName>Area_of_interest__c</fullName>
    <label>Area of interest</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OUT</fullName>
            </value>
            <value>
                <fullName>SFDC</fullName>
            </value>
            <value>
                <fullName>BI</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>