force-app/main/default/objects/Lead/fields/KartkaPL__c.field-meta.xml
<CustomField>
    <fullName>KartkaPL__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>kartka świąteczna</inlineHelpText>
    <label>Kartka PL</label>
    <type>Checkbox</type>
</CustomField>