force-app/main/default/objects/Lead/fields/Set_Unqualified_Date__c.field-meta.xml
<CustomField>
    <fullName>Set_Unqualified_Date__c</fullName>
    <label>Set Unqualified Date</label>
    <type>Date</type>
</CustomField>