force-app/main/default/objects/Lead/listViews/All_Leads_Suspended.listView-meta.xml
<ListView>
    <fullName>All_Leads_Suspended</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status_Details__c</field>
        <operation>equals</operation>
        <value>Suspended</value>
    </filters>
    <label>All Leads - Suspended</label>
    <language>en_US</language>
</ListView>