force-app/main/default/objects/Lead/listViews/All_Sales_Team_Lead.listView-meta.xml
<ListView>
    <fullName>All_Sales_Team_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>All Sales Team</label>
    <queue>All_Sales_Team</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>