force-app/main/default/objects/Lead/listViews/AllLeads.listView-meta.xml
<ListView>
    <fullName>AllLeads</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>Status_Details__c</columns>
    <columns>KartkaPL__c</columns>
    <columns>KartkaENG__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status_Details__c</field>
        <operation>notEqual</operation>
        <value>Suspended</value>
    </filters>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Unqualified</value>
    </filters>
    <label>All Leads</label>
</ListView>