force-app/main/default/objects/Lead/listViews/AllUnassignedLeads.listView-meta.xml
<ListView>
    <fullName>AllUnassignedLeads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <filterScope>Queue</filterScope>
    <label>All Unassigned Leads</label>
    <queue>All_Sales_Team</queue>
</ListView>