force-app/main/default/objects/Lead/listViews/Moje_Kartki.listView-meta.xml
<ListView>
    <fullName>Moje_Kartki</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATUS</columns>
    <columns>KartkaPL__c</columns>
    <columns>KartkaENG__c</columns>
    <columns>LEAD.STREET</columns>
    <columns>LEAD.CITY</columns>
    <filterScope>Mine</filterScope>
    <label>Moje leady kartki</label>
</ListView>