force-app/main/default/objects/Lead/listViews/My_Open_Leads.listView-meta.xml
<ListView>
    <fullName>My_Open_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Unqualified,Converted</value>
    </filters>
    <label>My_Open_Leads</label>
    <language>en_US</language>
</ListView>