force-app/main/default/objects/Lead/listViews/MyLeads.listView-meta.xml
<ListView>
    <fullName>MyLeads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.LAST_ACTIVITY</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>LEAD.STATUS</field>
        <operation>notEqual</operation>
        <value>Unqualified</value>
    </filters>
    <label>My Leads</label>
</ListView>